--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,5 @@
+@import "reset";
+
 * {
     padding: 0;
     margin: 0;
@@ -8,7 +10,12 @@
     height: 100vh;
     outline: none;
     border: none;
+    // TODO: change font family
+    font-family: Arial, Helvetica, sans-serif; 
 }
 
+@import "variables";
+@import "mixin";
 @import "dialogue";
 @import "button";
+@import "progress";
