--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,11 @@
 $grey: rgba(0, 0, 0, 0.4);
 $grey-darker: rgba(0, 0, 0, 0.6);
+$gold: #EFC842;
+$gold-darker: #dfb52b;
+$brown: #896d0f;
+$brown-darker: rgba(97, 79, 15, 0.612);
+$purple: rgba(107, 87, 148);
+$purple-darker: rgb(80, 64, 111);
+
 $text-shadow: 2px 4px 8px $grey-darker;
 $box-shadow: 2px 4px 8px $grey-darker;
