--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -19,7 +19,7 @@
 @mixin box-shadow {
     box-shadow: $box-shadow;
 }
-@mixin drop-shadow($color, $offset-y: 2px, $spread: 4px) {
+@mixin drop-shadow($color: black, $offset-y: 2px, $spread: 4px) {
     filter: drop-shadow($color 0px $offset-y $spread);
 }
 
