--- a/src/scss/_dialogue.scss
+++ b/src/scss/_dialogue.scss
@@ -51,6 +51,22 @@
             top: -4vh;
             transform: rotate(-15deg);
         }
+        #Chamomile {
+            width: 120%;
+            right: -6vw;
+            top: -8vh;
+        }
+        #Evening-Primrose {
+            width: 100%;
+            right: -4vw;
+            top: -15vh;
+            transform: rotate(45deg);
+        }
+        #Rose {
+            width: 100%;
+            right: -4vw;
+            top: -8vh;
+        }
     }
     
     
