--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,8 +4,10 @@ $gold: #EFC842;
 $gold-darker: #dfb52b;
 $brown: #896d0f;
 $brown-darker: rgba(97, 79, 15, 0.612);
+$purple-lighter: rgb(131, 115, 164);
 $purple: rgba(107, 87, 148);
 $purple-darker: rgb(80, 64, 111);
+$green: rgb(94, 140, 111);
 
 $text-shadow: 2px 4px 8px $grey-darker;
 $box-shadow: 2px 4px 8px $grey-darker;
