--- a/src/scss/_dialogue.scss
+++ b/src/scss/_dialogue.scss
@@ -2,6 +2,7 @@
     position: fixed;
     top: 68vh;
     left: 50vw;
+    width: 100vw;
     transform: translateX(-50%); /* to center the dialogue window */
     display: flex;
     flex-direction: column;
@@ -9,66 +10,70 @@
     align-items: center;
     font-size: 1.4rem;
     line-height: 1.4;
+
+    @include device(tablet) {
+        top: 60vh;
+        font-size: 1.2rem;
+    }
+    @include device(mobile) {
+        top: auto;
+        bottom: 8px;
+        font-size: 1rem;
+    }
 }
 
 .dialogWindow {
-    position: relative;
-    top: 0;
     width: 60vw;
-    height: 15vh;
+    height: 18vh;
     z-index: 100;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
     @include text-box;
-    @include p-16;
+    padding: 8px 48px;
 
-    > :first-child {
-        display: flex;
-        justify-content: space-between;
-        padding: 8px 48px;
+    @include device(tablet) {
+        width: 80vw;
     }
+    @include device(mobile) {
+        margin: auto 48px;
+        height: 24vh;
+        padding: 8px 16px;
 
-    .img-wrapper {
-        position: relative;
-        width: 24%;
-        right: 0;
-        top: 0;
-
-        img {
-            position: absolute;
-            
-        }
-        // RWD issue :,)
-        #Leymus {
-            height: 32vh;
-            right: 0;
-            top: -14vh;
-        }
-        #Galaxy {
-            width: 140%;
-            right: -4vw;
-            top: -4vh;
-            transform: rotate(-15deg);
-        }
-        #Chamomile {
-            width: 120%;
-            right: -6vw;
-            top: -8vh;
-        }
-        #Evening-Primrose {
-            width: 100%;
-            right: -4vw;
-            top: -15vh;
-            transform: rotate(45deg);
-        }
-        #Rose {
-            width: 100%;
-            right: -4vw;
-            top: -8vh;
-        }
+        flex-direction: column;
+        height: auto;
     }
     
+    .img-container {
+        display: flex;
+        align-items: center;
+        max-width: fit-content;
+
+        @include device(mobile) {
+            justify-content: end;
+            max-width: 100%;
+        }
+    }
+    img {
+        max-width: 20vw;
+        max-height: 300px;
+
+        @include device(mobile) {
+            max-height: 10vh;
+        }
+    }
+
+    #Galaxy {
+        transform: rotate(-15deg);
+    }
+    #Chamomile {
+        width: 140%;
+    }
+    #Evening-Primrose {
+        width: 100%;
+    }
+    #Rose {
+        width: 100%;
+    }
     
     .speaker {
         color: $gold;
@@ -76,12 +81,16 @@
     }
 
     .dialogMessage {
-        max-width: 74%;
-        display: flex;
-        flex-direction: column;
-        justify-content: start;
         color: white;
+        padding: 8px 48px;
         
+        @include device(tablet) {
+            max-width: 88%;
+            padding: 8px 16px;
+        }
+        @include device(mobile) {
+            padding: 8px 8px;
+        }
     }
 }
 
@@ -93,6 +102,12 @@
     justify-content: space-evenly;
     align-items: center;
 
+    @include device(tablet) {
+        flex-direction: column;
+        justify-content: start;
+        width: 80%;
+    }
+
     li {
         min-width: 48%;
         @include text-response;
@@ -101,13 +116,18 @@
             background-color: $purple;
         }
 
+        @include device(tablet) {
+            width: 100%;
+            margin-bottom: 12px;
+        }
+
     }
-    li:hover {
+    li:hover, li:focus {
         background-color: $grey;
         transition: .5s;
 
         .primary {
-            background-color: $purple-darker;
+            background-color: $purple-lighter;
         }
     }
 
