--- a/src/scss/_dialogue.scss
+++ b/src/scss/_dialogue.scss
@@ -1,4 +1,5 @@
 .dialog-wrapper {
+    z-index: 100;
     position: fixed;
     top: 68vh;
     left: 50vw;
@@ -6,7 +7,7 @@
     transform: translateX(-50%); /* to center the dialogue window */
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     font-size: 1.4rem;
     line-height: 1.4;
@@ -104,7 +105,7 @@
 
     @include device(tablet) {
         flex-direction: column;
-        justify-content: start;
+        justify-content: flex-start;
         width: 80%;
     }
 
