--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,6 +6,7 @@ $brown: #896d0f;
 $brown-darker: rgba(97, 79, 15, 0.612);
 $purple-lighter: rgb(131, 115, 164);
 $purple: rgba(107, 87, 148);
+$purple-overlay: rgba(107, 87, 148, 0.6);
 $purple-darker: rgb(80, 64, 111);
 $green: rgb(94, 140, 111);
 
