--- a/src/scss/_letter.scss
+++ b/src/scss/_letter.scss
@@ -4,19 +4,19 @@
     left: 50vw;
     transform: translate(-50%, -50%);
     z-index: 100;
-    // background-color: $grey;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 
     img {
         position: relative;
-        max-width: 70%;
+        max-width: 50%;
         transform: rotate(15deg);
         @include drop-shadow($grey, 8px, 16px);
 
         @include device(mobile) {
-            max-width: 100%;
+            max-width: 60%;
         }
     }
 }
